<?xml version="1.0" encoding="UTF-8"?>
<!--

       Copyright 2009-2025 the original author or authors.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>52</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz</groupId>
    <artifactId>htmlcompressor</artifactId>
    <version>1.10.1-SNAPSHOT</version>

    <name>htmlcompressor</name>
    <description>HtmlCompressor is a small, fast and very easy to use Java library that minifies given HTML or XML source by
               removing extra whitespaces, comments and other unneeded characters without breaking the content structure.
               As a result pages become smaller in size and load faster. A command-line version of the compressor is also
               available.</description>
    <url>https://github.com/hazendaz/htmlcompressor/</url>
    <inceptionYear>2009</inceptionYear>
    <organization>
        <name>Jeremy Landis</name>
        <url>https://github.com/hazendaz/htmlcompressor/</url>
    </organization>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
            <comments>htmlcompressor is distributed under Apache License 2.0</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>serg472</id>
            <name>Sergiy Kovalchuk</name>
            <email>serg472@gmail.com</email>
            <url>http://code.google.com/p/htmlcompressor/</url>
            <organization>Sergiy Kovalchuk</organization>
            <organizationUrl>http://code.google.com/p/htmlcompressor/</organizationUrl>
            <roles>
                <role>owner</role>
                <role>developer</role>
            </roles>
            <timezone>-8</timezone>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>Alex Tunyk</name>
            <email>alextunyk@gmail.com</email>
            <url>http://alex.tunyk.com</url>
            <organization>TUNYK.COM</organization>
            <organizationUrl>http://tunyk.com</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </contributor>
    </contributors>

    <scm>
        <connection>scm:git:ssh://git@github.com/hazendaz/htmlcompressor.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/htmlcompressor.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/hazendaz/htmlcompressor/</url>
    </scm>
    <issueManagement>
        <system>Github</system>
        <url>https://github.com/hazendaz/htmlcompressor/issues</url>
    </issueManagement>
    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>GitHub Pages</name>
            <url>scm:git:ssh://git@github.com/hazendaz/htmlcompressor.git</url>
        </site>
    </distributionManagement>

    <properties>
        <!-- Maven compiler options -->
        <java.version>21</java.version>
        <java.release.version>21</java.release.version>

        <!-- Keep javadocs in legacy mode as various issues in oss modules preventing update. -->
        <javadoc.java.release.version>21</javadoc.java.release.version>
        <legacyMode>true</legacyMode>

        <!-- Automatic Module Name -->
        <module.name>com.github.hazendaz.htmlcompressor</module.name>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1745087660</project.build.outputTimestamp>

        <!-- External Modules -->
        <slf4j.version>2.0.17</slf4j.version>

        <!-- Skip formatting plugins that will break test cases and unnecessary in this case. -->
        <spotless.apply.skip>true</spotless.apply.skip>
        <whitespace.skip>true</whitespace.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.google.javascript</groupId>
            <artifactId>closure-compiler</artifactId>
            <version>v20250407</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.4.8-jre</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet.jsp</groupId>
            <artifactId>jakarta.servlet.jsp-api</artifactId>
            <version>2.3.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity-engine-core</artifactId>
            <version>2.4.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.17.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.yahoo.platform.yui</groupId>
            <artifactId>yuicompressor</artifactId>
            <version>2.4.8</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.12.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <excludes combine.children="append">
                                <exclude>**/src/test/resources/html/*</exclude>
                                <exclude>**/src/test/resources/xml/*</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.googlecode.htmlcompressor.CmdLineCompressor</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <descriptors>
                        <descriptor>${project.basedir}/src/main/assembly/distributive.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
